--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>TestPage</title>
 </head>
 <body>
     <h1>Hi Max</h1>
+    <div class='hex'>
+        <div class='part-of-hex'>
+        <div class='hex-img'></div>  
+        </div>  
+    </div>
 </body>
 </html>
